<resources>
    <string name="app_name">AppNextExercise</string>
    <string name="home_tag">daily_activity</string>
    <string name="timeline_tag">timeline</string>
    <string name="daily_activity_title">Daily Activity</string>
    <string name="timeline_title">Timeline</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="daily_goal_info">Be active. Be healthy. Set goals.</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="weekly_progress_info">Set realistic goals</string>
    <string name="timeline">Timeline</string>
    <string name="daily_goal_lowercase">Daily goal</string>
    <string name="activity">Activity</string>
    <string name="steps">&#160;steps</string>
    <string name="steps_capital">Steps:</string>

</resources>