<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home_fragment.HomeFragment">

    <TextView
        android:id="@+id/daily_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/daily_goal"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/daily_goal_info"
        />

    <TextView
        android:id="@+id/daily_goal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/daily_goal_info"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daily_goal"
        />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/Grey_light"
        app:layout_constraintBottom_toTopOf="@id/weekly_progress"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/weekly_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="8dp"
        android:text="@string/weekly_progress"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daily_goal_info"
        app:layout_constraintBottom_toTopOf="@id/weekly_progress_info"
        />

    <TextView
        android:id="@+id/weekly_progress_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/weekly_progress_info"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weekly_progress"
        />
    
    <TextView
        android:id="@+id/timeline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/timeline"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/timeline"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/daily_goal_info"
        />


<!--    <TextView-->
<!--        android:id="@+id/activity_indicator"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/roboto_medium"-->
<!--        android:text="@string/activity"-->
<!--        android:textSize="10sp"-->
<!--        android:textColor="@color/grey_text"-->
<!--        android:drawableTop="@color/blue_indicator"-->
<!--        app:layout_constraintTop_toBottomOf="@id/weekly_progress_info"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->

<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/daily_goals_indicator"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/roboto_medium"-->
<!--        android:text="@string/daily_goal_lowercase"-->
<!--        android:textSize="10sp"-->
<!--        android:textColor="@color/grey_text"-->
<!--        android:layout_marginStart="25dp"-->

<!--        app:layout_constraintTop_toBottomOf="@id/weekly_progress_info"-->
<!--        app:layout_constraintEnd_toStartOf="@id/activity_indicator"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:drawableStartCompat="@color/green_indicator"-->
<!--        />-->


</androidx.constraintlayout.widget.ConstraintLayout>